# noctalia-vpn-plugin

./: CLAUDE.md  README.md  noctalia-vpn-backend.service  pyproject.toml
backend/: app.py
backend/config/: settings.py
backend/core/: state.py
backend/dbus/: dbus_server.py
backend/models/: server.py
backend/monitoring/: health.py  log_streamer.py  traffic.py
backend/routing/: rules.py
backend/service/: kill_switch.py  vpn_service.py
backend/singbox/: config_builder.py  process_manager.py  transport.py
backend/storage/: persistence.py  subscriptions.py
backend/subscription/: manager.py  parsers.py
plugin/: BarWidget.qml  Main.qml  Panel.qml  README.md  dbus-bridge.py  manifest.json
plugin/i18n/: en.json
polkit/: 10-noctalia-vpn-tun.rules  org.noctalia.vpn.policy
