[project]
name = "noctalia-vpn-plugin"
version = "0.1.0"
description = "VPN/proxy management backend for Noctalia Shell"
requires-python = ">=3.12"
dependencies = [
    "dbus-next>=0.2.3",
    "pydantic>=2.0",
    "aiofiles>=23.0",
    "aiohttp>=3.9",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["backend*"]
